--- a/springUser/src/main/resources/application.properties
+++ b/springUser/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.uri=mongodb://localhost:27017/UserS
 spring.data.mongodb.database=UserS
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
