--- a/springRating/src/main/resources/application.properties
+++ b/springRating/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.data.mongodb.uri=mongodb://localhost:27017/ratingService
 spring.data.mongodb.database=ratingService
 #spring.jpa.hibernate.ddl-auto=update
 server.port=9595
+
+
+spring.application.name=RATING-MICROSERVICE
+eureka.client.fetch-registry=true
+
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
