--- a/spring-mongodb/pom.xml
+++ b/spring-mongodb/pom.xml
@@ -15,6 +15,7 @@
 	<description>mangodb with spring boot example</description>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.package.name.YourApplicationMainClass</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
