--- a/springHotel/src/main/resources/application.properties
+++ b/springHotel/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.data.mongodb.uri=mongodb://localhost:27017/hotelS
 spring.data.mongodb.database=hotelS
 #spring.jpa.hibernate.ddl-auto=update
 server.port=9090
+spring.application.name=HOTEL-MICROSERVICE
+eureka.client.fetch-registry=true
+
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
