--- a/springUser/src/main/resources/application.properties
+++ b/springUser/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+server.port=8888
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.uri=mongodb://localhost:27017/UserS
 spring.data.mongodb.database=UserS
 #spring.jpa.hibernate.ddl-auto=update
+spring.application.name=USER-MICROSERVICE
+eureka.client.fetch-registry=true
+
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
