--- a/spring-mongodb/src/main/resources/application.properties
+++ b/spring-mongodb/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.uri=mongodb://localhost:27017/bookStore
 spring.data.mongodb.database=bookStore
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8981
